--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/zakielyasa/pair-project#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "pg": "^6.4.2",
     "sequelize": "^4.32.2",
     "sequelize-cli": "^3.2.0"
