--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,9 @@
 {
   "development": {
     "username": "postgres",
-    "password": "zed220891",
-    "database": "database_development",
+    "password": "Semau6ue",
+    "database": "database",
     "host": "127.0.0.1",
     "dialect": "postgres"
-  },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
   }
 }
