--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "zed220891",
+    "password": "Semau6ue",
     "database": "database",
     "host": "127.0.0.1",
     "dialect": "postgres"
